deploy vue app v1

--- a/public/index.html
+++ b/public/index.html
@@ -1,60 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Team App</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
-
-<body onload="init()">
-  <header>
-    <div class="btns">
-      <button class="nav-btn login-btn" onclick="openLogin()">Login</button>
-      <button class="nav-btn logout-btn hide" onclick="doLogout()">Logout</button>
-    </div>
-    <h3 class="header-greet hide">Hello <span></span></h3>
-  </header>
-  <main class="main-container">
-
-    <h1>Hello Teams</h1>
-
-    <label for="your-team">Your Name</label>
-    <select id="your-team" class="select-your-name form-el"></select>
-
-    <label for="partner-team">Partner Name</label>
-    <select class="select-partner-name form-el"></select>
-
-    <button onclick="submitTeam()" class="submit-team btn">Submit</button>
-  </main>
-  <table class="team-list">
-    <thead>
-      <tr>
-        <th>Member 1</th>
-        <th>Member 2</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <div class="screen"></div>
-
-  <div class="login modal">
-    <h3>Login</h3>
-    <input class="username form-el" type="text" placeholder="Enter Username" />
-    <input class="password form-el" type="password" placeholder="Enter Password" />
-    <button class="btn" onclick="doLogin()">Submit</button>
-  </div>
-
-  <div class="user-msg modal">
-    <h1></h1>
-    <button class="btn" onclick="closeMsg()">Close</button>
-  </div>
-  <script src="lib/axios.js"></script>
-  <script src="js/main.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><!--[if IE]><link rel="icon" href="/favicon.ico"><![endif]--><title>frontend</title><link href="/css/app.58ff78df.css" rel="preload" as="style"><link href="/js/app.1d5f66fa.js" rel="preload" as="script"><link href="/js/chunk-vendors.c332a65b.js" rel="preload" as="script"><link href="/css/app.58ff78df.css" rel="stylesheet"><link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"><link rel="manifest" href="/manifest.json"><meta name="theme-color" content="#4DBA87"><meta name="apple-mobile-web-app-capable" content="no"><meta name="apple-mobile-web-app-status-bar-style" content="default"><meta name="apple-mobile-web-app-title" content="frontend"><link rel="apple-touch-icon" href="/img/icons/apple-touch-icon-152x152.png"><link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#4DBA87"><meta name="msapplication-TileImage" content="/img/icons/msapplication-icon-144x144.png"><meta name="msapplication-TileColor" content="#000000"></head><body><noscript><strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.c332a65b.js"></script><script src="/js/app.1d5f66fa.js"></script></body></html>
